--- a/projects/weather/src/lib/w-city/components/w-city.component.html
+++ b/projects/weather/src/lib/w-city/components/w-city.component.html
@@ -3,7 +3,7 @@
   <div><span>{{data.countryCode}}</span></div>
   <div>
     <span class="city-item-wind">
-      <img src="assets/weather/wind.png" alt="">   {{data.wind}}mps
+      <img src="https://github.com/jeetadhikari92/w-lib/blob/master/projects/docs/assets/wind.png" alt="">   {{data.wind}}mps
     </span>
   </div>
   <div class="city-item-weather">
@@ -11,6 +11,6 @@
   </div>
   <div class="city-item-temperature">
     <span>{{data.temperature}}</span>
-    <img src="assets/weather/centegrade.svg">
+    <img src="https://github.com/jeetadhikari92/w-lib/blob/master/projects/docs/assets/centegrade.svg">
   </div>
 </div>
