--- a/projects/weather/src/lib/w-forecast/component/w-forecast.component.html
+++ b/projects/weather/src/lib/w-forecast/component/w-forecast.component.html
@@ -3,7 +3,7 @@
   <div><span>{{forecast.date}}</span></div>
   <div class="forecast-item-wind">
     <span>
-      <img src="https://github.com/jeetadhikari92/w-lib/blob/master/projects/docs/assets/wind.png" alt=""> {{forecast.wind}}mps
+      <img src="https://raw.githubusercontent.com/jeetadhikari92/w-lib/master/projects/docs/assets/wind.png" alt=""> {{forecast.wind}}mps
     </span>
   </div>
   <div class="forecast-item-weather">
@@ -11,6 +11,6 @@
   </div>
   <div class="forecast-item-temperature">
     <span>{{forecast.temperature}}</span>
-    <img src="https://github.com/jeetadhikari92/w-lib/blob/master/projects/docs/assets/centegrade.svg">
+    <img src="https://raw.githubusercontent.com/jeetadhikari92/w-lib/master/projects/docs/assets/centegrade.svg">
   </div>
 </div>
